subo toda config del proyecto

--- a/Muestra/tictactoeProyecto/tictactoeProyecto/tictactoeProyecto.vcxproj.filters
+++ b/Muestra/tictactoeProyecto/tictactoeProyecto/tictactoeProyecto.vcxproj.filters
@@ -25,7 +25,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="GTO.resx">
+    <EmbeddedResource Include="_GTO.resx">
       <Filter>Archivos de recursos</Filter>
     </EmbeddedResource>
   </ItemGroup>
