--- a/Muestra/tictactoeProyecto/tictactoeProyecto/tictactoeProyecto.vcxproj.filters
+++ b/Muestra/tictactoeProyecto/tictactoeProyecto/tictactoeProyecto.vcxproj.filters
@@ -23,10 +23,18 @@
     <ClInclude Include="_GTO.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="_GTO.resx">
       <Filter>Archivos de recursos</Filter>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="tictactoeProyecto.rc">
+      <Filter>Archivos de recursos</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
